[packages] Enable mirror on packages downloaded through SCM
*This change adds a PKG_MIRROR_MD5SUM in hotplug2,
 netifd and opkg so they get downloaded through mirrors
 and limit the impact of external network outtage

Change-Id: I2a6feb8882493ab7cf8a334d72568a0cad892535
Signed-off-by: Mathieu Olivari <mathieu@codeaurora.org>

--- a/package/hotplug2/Makefile
+++ b/package/hotplug2/Makefile
@@ -20,6 +20,8 @@ PKG_SOURCE:=$(PKG_SOURCE_SUBDIR).tar.gz
 #PKG_SOURCE_URL:=http://isteve.bofh.cz/~isteve/hotplug2
 #PKG_MD5SUM:=ea2c01d027b4002e4e6b0ff266f51a51
 
+PKG_MIRROR_MD5SUM:=9a8e64f89558998bb824525105cdbe6b
+
 include $(INCLUDE_DIR)/package.mk
 
 define Package/hotplug2
