--- a/package/netifd/Makefile
+++ b/package/netifd/Makefile
@@ -9,7 +9,7 @@ PKG_SOURCE_URL:=git://nbd.name/luci2/netifd.git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 PKG_SOURCE_VERSION:=857874b2d4f92b800ecc12a5e52adeaf3855b101
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION)-$(PKG_SOURCE_VERSION).tar.gz
-PKG_MIRROR_MD5SUM:=da2d3e11fafd679d97d686241edbf98d
+#PKG_MIRROR_MD5SUM:=
 # CMAKE_INSTALL:=1
 
 include $(INCLUDE_DIR)/package.mk
