[netifd] Add MD5SUM back to allow the usage of a mirror
Change-Id: I863da8a4b6ea3bffdd991c1db91635870d333e57
Signed-off-by: Mathieu Olivari <mathieu@codeaurora.org>

--- a/package/netifd/Makefile
+++ b/package/netifd/Makefile
@@ -9,7 +9,7 @@ PKG_SOURCE_URL:=git://nbd.name/luci2/netifd.git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 PKG_SOURCE_VERSION:=b077337e6f213975a66e89d61b702aae48314885
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION)-$(PKG_SOURCE_VERSION).tar.gz
-#PKG_MIRROR_MD5SUM:=
+PKG_MIRROR_MD5SUM:=96d60358b5e24c0e82c008d3cfa80a36
 # CMAKE_INSTALL:=1
 
 include $(INCLUDE_DIR)/package.mk
