--- a/Config.in
+++ b/Config.in
@@ -284,6 +284,10 @@ menu "Global build settings"
 		bool "Enable printk timestamps"
 		default y
 
+	config KERNEL_SPARSE
+		bool "Enable sparse check during kernel build"
+		default n
+
 	comment "Package build options"
 
 	config DEBUG
